manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
  labels:
    app: juice-shop
