manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-svc
  namespace: juice-shop
  labels:
    app: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
