manifests/ingress.yaml
# Requires an ingress controller installed on the cluster, for example:
#   helm install ingress-nginx ingress-nginx/ingress-nginx -n ingress-nginx --create-namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
  namespace: juice-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice-shop-svc
                port:
                  number: 80
